openaps-report add monitor/clock-zoned.json JSON tz clock monitor/clock.json
      TODO: better change descriptions
      /usr/local/bin/openaps-report add monitor/clock-zoned.json JSON tz clock monitor/clock.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -210,3 +210,13 @@ input = predict/oref0.json
 use = set_temp_basal
 reporter = JSON
 
+[report "monitor/clock-zoned.json"]
+use = clock
+reporter = JSON
+astimezone = False
+date = None
+adjust = missing
+input = monitor/clock.json
+device = tz
+timezone = PST
+
