openaps-report invoke monitor/model.json
      TODO: better change descriptions
      /usr/local/bin/openaps-report invoke monitor/model.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -4,8 +4,7 @@ gather-data = report invoke monitor/glucose.json monitor/clock.json monitor/cloc
 gather-history = report invoke monitor/pump-history.json monitor/pump-history-zoned.json
 mm-prepare = report invoke monitor/mm-cleaned.json monitor/mm-reconciled.json monitor/mm-resolved.json monitor/mm-normalized.json
 oref0-predict = report invoke predict/profile.json predict/iob.json predict/oref0.json
-analyze-and-predict = ! bash -c "openaps mm-prepare && openaps oref0-predict"
-gather-and-predict = ! bash -c "openaps gather-data && openaps analyze-and-predict"
+gather-and-predict = ! bash -c "openaps gather-data && openaps oref0-predict"
 enact = report invoke control/enacted.json
 check-recommendation = ! bash -c "json -f predict/oref0.json && test -n \"$(json -f predict/oref0.json duration)\" && (echo \"OK\" ) || echo \"No recommendation to send\""
 check-recommendation-and-enact = ! bash -c "json -f predict/oref0.json && test -n \"$(json -f predict/oref0.json duration rate | tr -d ' ')\" && (echo \"OK\" && openaps enact ) || echo \"No recommendation to send\""
@@ -200,10 +199,10 @@ max-iob = max_iob.json
 [report "predict/iob.json"]
 profile = predict/profile.json
 use = shell
-clock = monitor/clock.json
+clock = monitor/clock-zoned.json
 reporter = text
 device = calculate-iob
-history = monitor/pump-history.json
+history = monitor/pump-history-zoned.json
 
 [report "predict/oref0.json"]
 profile = predict/profile.json
