openaps-report invoke monitor/glucose.json
      TODO: better change descriptions
      /usr/local/bin/openaps-report invoke monitor/glucose.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -11,6 +11,7 @@ latest-ns-treatment-time = ! bash -c "openaps use latest-treatments shell | json
 format-latest-nightscout-treatments = ! bash -c "nightscout cull-latest-openaps-treatments monitor/pump-history-zoned.json monitor/model.json $(openaps latest-ns-treatment-time) > monitor/upload-treatments.json"
 upload-recent-treatments = ! bash -c "openaps gather-history && openaps format-latest-nightscout-treatments && test $(json -f monitor/upload-treatments.json -a created_at eventType | wc -l ) -gt 0 && (openaps use ns-upload shell treatments.json monitor/upload-treatments.json ) || echo \"No recent treatments to upload\""
 do-everything = ! bash -c "openaps preflight && (test -n \"$(json -f monitor/model.json)\" && openaps gather-and-predict && openaps check-recommendation-and-enact && openaps upload-recent-treatments)"
+wait-for-bg = ! bash -c "cp monitor/glucose.json monitor/last-glucose.json; while(diff -q monitor/last-glucose.json monitor/glucose.json); do echo -n .; sleep 10; openaps report invoke monitor/glucose.json; done"
 
 [vendor "openapscontrib.mmhistorytools"]
 path = .
