--- a/openaps.ini
+++ b/openaps.ini
@@ -9,8 +9,8 @@ check-recommendation = ! bash -c "json -f predict/oref0.json && test -n \"$(json
 check-recommendation-and-enact = ! bash -c "json -f predict/oref0.json && test -n \"$(json -f predict/oref0.json duration rate | tr -d ' ')\" && (echo \"OK\" && openaps enact ) || echo \"No recommendation to send\""
 latest-ns-treatment-time = ! bash -c "openaps use latest-treatments shell | json created_at"
 format-latest-nightscout-treatments = ! bash -c "nightscout cull-latest-openaps-treatments monitor/pump-history-zoned.json monitor/model.json $(openaps latest-ns-treatment-time) > monitor/upload-treatments.json"
-upload-recent-treatments = ! bash -c "openaps gather-history && openaps format-latest-nightscout-treatments && test $(json -f monitor/upload-treatments.json -a created_at eventType | wc -l ) -gt 0 && (openaps use ns-upload shell treatments.json monitor/upload-treatments.json ) || echo \"No recent treatments to upload\""
-do-everything = ! bash -c "openaps preflight && (test -n \"$(json -f monitor/model.json)\" && openaps gather-and-predict && openaps check-recommendation-and-enact && openaps upload-recent-treatments)"
+upload = ! bash -c "openaps gather-history && openaps format-latest-nightscout-treatments && test $(json -f monitor/upload-treatments.json -a created_at eventType | wc -l ) -gt 0 && (openaps use ns-upload shell treatments.json monitor/upload-treatments.json ) || echo \"No recent treatments to upload\""
+do-everything = ! bash -c "openaps preflight && (test -n \"$(json -f monitor/model.json)\" && openaps gather-and-predict && openaps check-recommendation-and-enact && openaps upload)"
 wait-for-bg = ! bash -c "cp monitor/glucose.json monitor/last-glucose.json; while(diff -q monitor/last-glucose.json monitor/glucose.json); do echo -n .; sleep 10; openaps report invoke monitor/glucose.json; done"
 
 [vendor "openapscontrib.mmhistorytools"]
