--- a/openaps.ini
+++ b/openaps.ini
@@ -2,17 +2,12 @@
 preflight = ! bash -c "rm -vf monitor/model.json && openaps report invoke monitor/model.json && test -n $(json -f monitor/model.json) && echo \"PREFLIGHT OK\" || ( mm-stick warmup fail 'NO PUMP MODEL RESPONDED' || mm-stick fail 'NO MEDTRONIC CARELINK STICK AVAILABLE')"
 gather-data = report invoke monitor/glucose.json monitor/clock.json monitor/clock-zoned.json monitor/pump-history.json monitor/pump-history-zoned.json monitor/active-basal-profile.json monitor/reservoir.json monitor/settings.json monitor/status.json monitor/battery.json monitor/bg-targets.json monitor/insulin-sensitivities.json monitor/carb-ratios.json monitor/temp-basal-status.json monitor/latest-treatments.json
 gather-history = report invoke monitor/pump-history.json monitor/pump-history-zoned.json
-oref0-predict = report invoke predict/profile.json predict/iob.json predict/oref0.json
-gather-and-predict = ! bash -c "openaps gather-data && openaps oref0-predict"
-enact = report invoke control/enacted.json
-check-recommendation = ! bash -c "json -f predict/oref0.json && test -n \"$(json -f predict/oref0.json duration)\" && (echo \"OK\" ) || echo \"No recommendation to send\""
-check-recommendation-and-enact = ! bash -c "json -f predict/oref0.json && test -n \"$(json -f predict/oref0.json duration rate | tr -d ' ')\" && (echo \"OK\" && openaps enact ) || echo \"No recommendation to send\""
 latest-ns-treatment-time = ! bash -c "openaps use latest-treatments shell | json created_at"
 format-latest-nightscout-treatments = ! bash -c "nightscout cull-latest-openaps-treatments monitor/pump-history-zoned.json monitor/model.json $(openaps latest-ns-treatment-time) > monitor/upload-treatments.json"
+enact = ! bash -c "rm -vf predict/*; openaps report invoke predict/profile.json predict/iob.json predict/oref0.json && cat predict/oref0.json && grep -q duration predict/oref0.json && ( openaps report invoke control/enacted.json && cat control/enacted.json ) || echo No action required"
 upload = ! bash -c "openaps gather-history && openaps format-latest-nightscout-treatments && test $(json -f monitor/upload-treatments.json -a created_at eventType | wc -l ) -gt 0 && (openaps use ns-upload shell treatments.json monitor/upload-treatments.json ) || echo \"No recent treatments to upload\""
-do-everything = ! bash -c "openaps preflight && (test -n \"$(json -f monitor/model.json)\" && openaps gather-data && openaps enact-new && openaps upload)"
+do-everything = ! bash -c "openaps preflight && (test -n \"$(json -f monitor/model.json)\" && openaps gather-data && openaps enact && openaps upload)"
 wait-for-bg = ! bash -c "cp monitor/glucose.json monitor/last-glucose.json; while(diff -q monitor/last-glucose.json monitor/glucose.json); do echo -n .; sleep 10; openaps report invoke monitor/glucose.json; done"
-enact-new = ! bash -c "rm -vf predict/*; openaps report invoke predict/profile.json predict/iob.json predict/oref0.json && cat predict/oref0.json && grep -q duration predict/oref0.json && ( openaps report invoke control/enacted.json && cat control/enacted.json ) || echo No action required"
 
 [vendor "openapscontrib.mmhistorytools"]
 path = .
