openaps-report invoke monitor/model.json
      TODO: better change descriptions
      /usr/local/bin/openaps-report invoke monitor/model.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -8,6 +8,9 @@ enact = ! bash -c "rm -vf predict/*; openaps report invoke predict/profile.json 
 upload = ! bash -c "openaps gather-history && openaps format-latest-nightscout-treatments && test $(json -f monitor/upload-treatments.json -a created_at eventType | wc -l ) -gt 0 && (openaps use ns-upload shell treatments.json monitor/upload-treatments.json ) || echo \"No recent treatments to upload\""
 do-everything = ! bash -c "openaps preflight && (test -n \"$(json -f monitor/model.json)\" && openaps gather && openaps enact && openaps upload)"
 wait-for-bg = ! bash -c "cp monitor/glucose.json monitor/last-glucose.json; while(diff -q monitor/last-glucose.json monitor/glucose.json); do echo -n .; sleep 10; openaps report invoke monitor/glucose.json; done"
+wait-loop = ! bash -c "openaps preflight && openaps gather && openaps upload && openaps wait-for-bg && openaps enact"
+loop = ! bash -c "openaps preflight && openaps gather && openaps enact"
+retry-loop = ! bash -c "openaps wait-loop || until( ! mm-stick warmup || ! openaps preflight || openaps loop); do sleep 10; done; openaps preflight && openaps upload"
 
 [vendor "openapscontrib.mmhistorytools"]
 path = .
