--- a/openaps.ini
+++ b/openaps.ini
@@ -5,7 +5,7 @@ gather-history = report invoke monitor/pump-history.json monitor/pump-history-zo
 latest-ns-treatment-time = ! bash -c "openaps use latest-treatments shell | json created_at"
 format-latest-nightscout-treatments = ! bash -c "nightscout cull-latest-openaps-treatments monitor/pump-history-zoned.json monitor/model.json $(openaps latest-ns-treatment-time) > monitor/upload-treatments.json"
 enact = ! bash -c "rm -vf predict/*; openaps report invoke predict/profile.json predict/iob.json predict/oref0.json && cat predict/oref0.json && grep -q duration predict/oref0.json && ( openaps report invoke control/enacted.json && cat control/enacted.json ) || echo No action required"
-upload = ! bash -c "openaps gather-history && openaps format-latest-nightscout-treatments && test $(json -f monitor/upload-treatments.json -a created_at eventType | wc -l ) -gt 0 && (openaps use ns-upload shell treatments.json monitor/upload-treatments.json ) || echo \"No recent treatments to upload\""
+upload = ! bash -c "openaps format-latest-nightscout-treatments && test $(json -f monitor/upload-treatments.json -a created_at eventType | wc -l ) -gt 0 && (openaps use ns-upload shell treatments.json monitor/upload-treatments.json ) || echo \"No recent treatments to upload\""
 do-everything = ! bash -c "openaps preflight && (test -n \"$(json -f monitor/model.json)\" && openaps gather && openaps enact && openaps upload)"
 wait-for-bg = ! bash -c "cp monitor/glucose.json monitor/last-glucose.json; while(diff -q monitor/last-glucose.json monitor/glucose.json); do echo -n .; sleep 10; openaps report invoke monitor/glucose.json; done"
 wait-loop = ! bash -c "openaps preflight && openaps gather && openaps upload && openaps wait-for-bg && openaps enact"
