--- a/openaps.ini
+++ b/openaps.ini
@@ -1,6 +1,6 @@
 [alias]
 preflight = ! bash -c "rm -vf monitor/model.json && openaps report invoke monitor/model.json && test -n $(json -f monitor/model.json) && echo \"PREFLIGHT OK\" || ( mm-stick warmup fail 'NO PUMP MODEL RESPONDED' || mm-stick fail 'NO MEDTRONIC CARELINK STICK AVAILABLE')"
-gather = report invoke monitor/glucose.json monitor/clock.json monitor/clock-zoned.json monitor/pump-history.json monitor/pump-history-zoned.json monitor/active-basal-profile.json monitor/reservoir.json monitor/settings.json monitor/status.json monitor/battery.json monitor/bg-targets.json monitor/insulin-sensitivities.json monitor/carb-ratios.json monitor/temp-basal-status.json monitor/latest-treatments.json predict/profile.json predict/iob.json
+gather = report invoke monitor/clock.json monitor/clock-zoned.json monitor/pump-history.json monitor/pump-history-zoned.json monitor/active-basal-profile.json monitor/reservoir.json monitor/settings.json monitor/status.json monitor/battery.json monitor/bg-targets.json monitor/insulin-sensitivities.json monitor/carb-ratios.json monitor/temp-basal-status.json monitor/latest-treatments.json predict/profile.json predict/iob.json
 gather-history = report invoke monitor/pump-history.json monitor/pump-history-zoned.json
 latest-ns-treatment-time = ! bash -c "openaps use latest-treatments shell | json created_at"
 format-latest-nightscout-treatments = ! bash -c "nightscout cull-latest-openaps-treatments monitor/pump-history-zoned.json monitor/model.json $(openaps latest-ns-treatment-time) > monitor/upload-treatments.json"
