openaps-report invoke monitor/clock.json
      TODO: better change descriptions
      /usr/local/bin/openaps-report invoke monitor/clock.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -1,5 +1,5 @@
 [alias]
-preflight = ! bash -c "rm -f monitor/clock.json && openaps report invoke monitor/clock.json 2>/dev/null && grep -q T monitor/clock.json && echo PREFLIGHT OK || ( mm-stick warmup || sudo oref0-reset-usb; echo PREFLIGHT FAIL; sleep 120; exit 1 )"
+preflight = ! bash -c "rm -f monitor/clock.json && openaps report invoke monitor/clock.json 2>/dev/null && grep -q T monitor/clock.json && echo PREFLIGHT OK || ( mm-stick warmup || echo PREFLIGHT FAIL; exit 1 )"
 preflight-old = ! bash -c "rm -vf monitor/model.json && openaps report invoke monitor/model.json && test -n $(json -f monitor/model.json) && echo \"PREFLIGHT OK\" || ( mm-stick warmup fail 'NO PUMP MODEL RESPONDED' || mm-stick fail 'NO MEDTRONIC CARELINK STICK AVAILABLE')"
 history = report invoke monitor/model.json monitor/clock-zoned.json monitor/pump-history.json monitor/pump-history-zoned.json
 gather = report invoke monitor/active-basal-profile.json monitor/reservoir.json monitor/settings.json monitor/status.json monitor/battery.json monitor/bg-targets.json monitor/insulin-sensitivities.json monitor/carb-ratios.json monitor/temp-basal-status.json monitor/latest-treatments.json predict/profile.json predict/iob.json
