openaps-report invoke control/ninja-enacted.json
      TODO: better change descriptions
      /usr/local/bin/openaps-report invoke control/ninja-enacted.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -218,3 +218,9 @@ input = predict/oref0.json
 use = set_temp_basal
 reporter = JSON
 
+[report "control/ninja-enacted.json"]
+device = pump
+input = control/ninja-says.json
+use = set_temp_basal
+reporter = JSON
+
