--- a/openaps.ini
+++ b/openaps.ini
@@ -224,3 +224,7 @@ input = control/ninja-says.json
 use = set_temp_basal
 reporter = JSON
 
+[device "cgm"]
+vendor = openaps.vendors.dexcom
+extra = cgm.ini
+
