openaps-report add monitor/glucose-direct.json JSON cgm iter_glucose 5
      TODO: better change descriptions
      /usr/local/bin/openaps-report add monitor/glucose-direct.json JSON cgm iter_glucose 5

--- a/openaps.ini
+++ b/openaps.ini
@@ -228,3 +228,9 @@ reporter = JSON
 vendor = openaps.vendors.dexcom
 extra = cgm.ini
 
+[report "monitor/glucose-direct.json"]
+device = cgm
+count = 5
+use = iter_glucose
+reporter = JSON
+
