openaps-report invoke monitor/clock.json
      TODO: better change descriptions
      /usr/local/bin/openaps-report invoke monitor/clock.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -228,7 +228,7 @@ reporter = JSON
 vendor = openaps.vendors.dexcom
 extra = cgm.ini
 
-[report "monitor/glucose-direct.json"]
+[report "monitor/ns-glucose.json"]
 device = cgm
 count = 5
 use = iter_glucose
